--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -1,11 +1,14 @@
-<div>
-  <div>
-    <span>{{ current.city }}, {{ current.country }}</span>
-    <span> {{ current.date | date: "fullDate" }}</span>
+<div *ngIf="current">
+  <div fxLayout="row">
+    <div fxFlex="66%">{{ current.city }}, {{ current.country }}</div>
+    <div fxFlex>{{ current.date | date: "fullDate" }}</div>
   </div>
-  <div>
-    <img [src]="current.image" width="5%" />
-    <span>{{ current.temperature | number: "1.0-0" }}</span>
+  <div fxLayout="row">
+    <div fxFlex="66%">
+      <img [src]="current.image" width="15%" />
+    </div>
+
+    <div fxFlex>{{ current.temperature | number: "1.0-0" }}</div>
   </div>
   <div>
     {{ current.description }}
